# chromTools

./: .gitignore  LICENSE  README.md  README.rst  c_build.py  functions.html  genindex.html  index.html  install.html  objects.inv  overview.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  usage.html  what.html  why.html
.github/workflows/: documentation.yaml  sphinx.yaml
_modules/: index.html
_modules/chromTools/: chmm_cmd.html  cmd.html
_sources/: functions.rst.txt  index.rst.txt  install.rst.txt  overview.rst.txt  usage.rst.txt
chromTools/: __main__.py  bootstrap_cmd.py  c_io.pyx  chmm_cmd.py  cmd.py  complete_cmd.py  constants.py  mmh.pxd  murmurhash.c  validate.py
chromTools/chromsize/: tmp.txt
docs/: chromTools.rst  index.rst  modules.rst  requirements.txt  why.rst
docs/source/: conf.py  functions.rst  index.rst  install.rst  overview.rst  usage.rst  what.rst
entirety/: cmd.py  constants.py  validate.py
test/: test_cli.py  test_cmd.py  test_s1.bed  test_s2.bed
