# pyproject.toml

[build-system]
requires      = ["setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entirety"
version = "1.0.0"
description = "By read count analysis of dataset completeness"
readme = "README.md"
authors = [{ name = "Jessica Shields", email = "j.m.shields@exeter.ac.uk" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["epigenetics", "analysis", "chromhmm"]
dependencies = [
    "MACS3>=3.0.0a7", 
    "pandas>=1.1.5", 
    "mmh3>=3.0.0", 
    "numpy>=1.21.6",
    "lmfit", 
    "matplotlib>=3.5.3"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest", "cli-test-helpers"]

[project.urls]
Homepage = "https://github.com/aspides-js/entirety"

[project.scripts]
entirety = "entirety.__main__:main"