# pyproject.toml

[build-system]
requires      = ["setuptools>=58.0.0", "wheel", "pip>=23.0.1", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "chromTools"
version = "1.0.0"
description = "By read count analysis of dataset completeness"
readme = "README.md"
authors = [{ name = "Jessica Shields", email = "j.m.shields@exeter.ac.uk" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["epigenetics", "analysis", "chromhmm"]
dependencies = [
    "pandas>=1.1.5", 
    "mmh3>=3.0.0", 
    "numpy>=1.21.6",
    "lmfit", 
    "matplotlib>=3.5.3"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest", "cli-test-helpers"]

[tool.setuptools]
py-modules = ["_custom_build"]

[tool.setuptools.cmdclass]
build_py = "_custom_build.build_py"


[project.urls]
Homepage = "https://github.com/aspides-js/chromTools"

[project.scripts]
chromTools = "chromTools.__main__:main"